
  ChangeLog for the spinning_mcmc repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    85: sluys, 08/12/2008
     - set tukeywin to 0.15
    
    83: sluys, 05/12/2008
     - Fixed bug: ifo[2].noisedoubleprecision was ifo[2].noisedoubleprecision 
       for data set 1 in mcmc_data.c
     - Added a new input file: mcmc.data (name specified in mcmc.input, 
       set selectdata=0 to use it).  See doc/mcmc.data for an example.
     - The parameter selectifos in mcmc.input selects the IFOs for the network
        
    65: sluys, 22/10/2008
     - Added possibility to start chains from specified values (new values for offsetmcmc)
       The input file has now one extra line 'starting values' below 'injection values'
     - The original (buggy?) dataset is back as #6 (for comparison with earlier results)
     - Some cleaning, parameters -> structs
    
    53: sluys, 06/08/2008
     - Replaced LALinterface.c with mcmc_lal.c: this contains all of LALinterface
       plus template15().  LAL-dependent stuff was moved from mcmc.h to the new
       file mcmc_lal.h.  A file mcmc_nolal.c was added to allow LALless compilation.
        
    48: sluys, 07/07/2008
     - Made some small changes (cleaning?) to the 15-waveform routines to see if 
       it changes anything
     
    47: sluys, 25/06/2008
     - Added routines to compute overlap, match and Fisher matrix to mcmc_signal
     - Cleaned up template12() and localpar() in mcmc_templates
     - Renamed this file to more default ChangeLog.txt
         
    46: sluys, 07/06/2008
     - Changed name and contents of *PSD.dat:
       - signalPSD.dat and dataPSD.dat have PSD replaced by FFT
       - these files contain real and imaginary parts of the amplitude spectrum
       - noisePSD.dat is now noiseASD.dat, because in contains the amplitudes
       - to get compatible amplitudes, all values are a factor sqrt(2) higher